fix: services text and bg image size fix on mobile view

--- a/style.css
+++ b/style.css
@@ -578,6 +578,25 @@
     }
   }
 
+  .x3-p {
+    font-size: xxx-large;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+
+  .services-h1 {
+    font-size: 32px;
+  }
+
+  .services-bg-img {
+    background-position: center;
+    background-size: cover;
+    max-width: 100%;
+    padding: 20px;
+    justify-content: center;
+    height: 550px;
+  }
+
   .cover-img {
     background-position: center;
     background-size: cover;
@@ -727,7 +746,7 @@
       width: 100%;
       margin: none;
     }
-    .slideImg {
+    .slideImg, .services-bg-img {
       height: 550px;
     }
   }
@@ -755,7 +774,7 @@
       width: 500px;
       object-fit: cover;
     }
-    .slideImg {
+    .slideImg, .services-bg-img {
       height: 445px;
     }
     .day-night-text {
@@ -782,7 +801,7 @@
       gap: 30px;
       justify-content: center;
     }
-    .slideImg {
+    .slideImg, .services-bg-img {
       height: 345px;
     }
     .header-font-size{
@@ -852,7 +871,7 @@
       margin: none;
       width: 100%
     }
-    .slideImg {
+    .slideImg, .services-bg-img {
       height: 250px;
     }
     .cover-img {
@@ -865,6 +884,14 @@
       height: 125px;
       width: 175px;
     }
+    .x3-p {
+      font-size: xx-large;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+    .services-h1 {
+      font-size: 24px;
+    }
   }
   @media (max-width: 460px){
     #menus{
@@ -875,7 +902,7 @@
       height: auto;
       object-fit: cover;
     }
-    .slideImg {
+    .slideImg, .services-bg-img {
       height: 200px;
     }
     #logo{
@@ -926,6 +953,14 @@
       font-size: 14px;
       top: 50%;
     }
+    .x3-p {
+      font-size: x-large;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+    .services-h1 {
+      font-size: 18px;
+    }
   }
   @media (max-width: 290px){
     .fill-form-img-div>img {
@@ -933,8 +968,8 @@
       height: auto;
       object-fit: cover;
     }
-    .slideImg {
-      height: 150px;
+    .slideImg, .services-bg-img {
+      height: 200px;
     }
     .process-card-parent{
       padding: 5px !important;
@@ -977,6 +1012,14 @@
       padding: 5px;
       font-size: 14px;
       top: 50%;
+    }
+    .x3-p {
+      font-size: x-large;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+    .services-h1 {
+      font-size: 18px;
     }
   }
   
